packages/react-app/src/App.css
.App {
  text-align: center;
}

.nav-bar {
  position: absolute;
  top: 15px;
  left: 360px;
  border: none !important;
}

.PageHeader {
  box-shadow: 0 0 6px rgba(0,0,0,0.2);
}

.cardBox {
  display: flex;
  flex-direction: column;
  height: 100%;
  min-height: 440px;
  background-color: #fff;
  /* border: 1px solid #eee; */
  border-radius: 8px;
  position: relative;
  z-index: 2;
  width: 400px;
  box-shadow: rgb(4 17 29 / 25%) 0px 0px 8px 0px;
  overflow: hidden;
}

.cardBox:hover {
  transform: translateY(-2px);
  /* box-shadow: rgb(4 17 29 / 25%) 0px 0px 8px 0px; */
  transition: all 0.1s ease 0s;
}

/* img size scale: 1337 * 992 */
.cardBox .imgBox {
  height: 296px;
  width: 400px;
  overflow: hidden;
  background-color: #f2f2f2;
}
.cardBox .imgBox img {
  object-fit: contain;
  width: auto;
  /* height: auto; */
  height: 100%;
  max-width: 100%;
  /* max-height: 100%; */
  border-radius: 0px;
}

.cardBox .infoBox {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding: 16px 10px 5px;
  /* background-color: #f2f2f2; */
  /* border-top: 1px solid #eee; */
}

.cardBox .infoBox .avatar {
  display: block;
  width: 46px;
  height: 46px;
  border: 4px solid #fff;
  position: absolute;
  top: -22px;
  left: 50%;
  margin-left: -22px;
  border-radius: 50%;
  overflow: hidden;
  border: 1xp solid #eee;
  box-shadow: 0px 0px 4px rgba(0,0,0,0.2);
}

.cardAction .actionBox {
  font-weight: 500;
  padding: 0 12px;
  /* padding-top: 0; */
  display: flex;
  align-items: center;
  height: 42px;
  width: 100%;
  border-bottom-left-radius: 10px;
  border-bottom-right-radius: 10px;
  background: linear-gradient(rgba(229, 232, 235, 0.392) 0%, rgb(255, 255, 255) 20%);
}

.cardAction .actionBox:hover {
  font-weight: bold;
}

#loading{
  background: rgba(0, 0, 0, 0.2);
  height: 100%;
  width: 100%;
  position: fixed;
  z-index: 1000;
  margin-top: 0px;
  top: 0px;
}
#loading-center{
  width: 100%;
  height: 100%;
  position: relative;
  }
#loading-center-absolute {
  position: absolute;
  left: 50%;
  top: 50%;
  height: 200px;
  width: 200px;
  margin-top: -100px;
  margin-left: -100px;
}
.object{
  -moz-border-radius: 50% 50% 50% 50%;
  -webkit-border-radius: 50% 50% 50% 50%;
  border-radius: 50% 50% 50% 50%;
  position: absolute;
  border-top: 5px solid rgba(208, 28, 21, 1);
  border-bottom: 5px solid transparent;
  border-left:  5px solid rgba(208, 28, 21, 1);
  border-right: 5px solid transparent;
  -webkit-animation: animate 2s infinite;
  animation: animate 2s infinite;	

  }
#object_one{
  left: 75px;
  top: 75px;
  width: 50px;
  height: 50px;
  }
              
#object_two{
  left: 65px;
  top: 65px;
  width: 70px;
  height: 70px;
  -webkit-animation-delay: 0.2s;
    animation-delay: 0.2s;
  }
    
#object_three{
  left: 55px;
  top: 55px;
  width: 90px;
  height: 90px;
  -webkit-animation-delay: 0.4s;
    animation-delay: 0.4s;
  }
#object_four{
  left: 45px;
  top: 45px;
  width: 110px;
  height: 110px;
  -webkit-animation-delay: 0.6s;
    animation-delay: 0.6s;
  
  }	

@-webkit-keyframes animate {
 

50% {

  -ms-transform: rotate(360deg) scale(0.8); 
     -webkit-transform: rotate(360deg) scale(0.8); 
    transform: rotate(360deg) scale(0.8); 
  }
}

@keyframes animate {
  
50% {

  -ms-transform: rotate(360deg) scale(0.8); 
     -webkit-transform: rotate(360deg) scale(0.8); 
    transform: rotate(360deg) scale(0.8); 
  }	
}

#close-loading{
  position: absolute;
  left: 60%;
  top: 30%;
  color: rgba(208, 28, 21, 1);
  font-size: 30px;
  cursor: pointer;
  z-index: 10000;
}

#close-text{
  position: absolute;
  left: 50%;
  margin-left: -150px;
  bottom: 50%;
  margin-bottom: -150px;
  color: rgba(208, 28, 21, 1);
  font-size: 20px;
  cursor: pointer;
  z-index: 10000;
}


.item-avatar:hover{
  background: rgba(225,225,225, 0.1);
  border-radius: 5px;
}

